# akfood_api

./: .dockerignore  .env  .gitignore  Dockerfile  destroy_database.py  pyproject.toml  reset_database.py  schema.prisma  seed.py  seed_all.py  seed_customers.py  seed_delivery_areas.py  seed_party_menus.py  seed_products.py  test_dashboard.py
app/: db.py  main.py
app/auth/: routers.py  schemas.py  service.py
app/cart/: routers.py  schemas.py  service.py
app/category/: routers.py  schemas.py  service.py
app/cms/: routers.py  schemas.py  service.py
app/config/: settings.py
app/dashboard/: routers.py  schemas.py  service.py
app/delivery_area/: routers.py  schemas.py  service.py
app/delivery_fee/: routers.py  schemas.py  service.py
app/notification_box/: routers.py  schemas.py  service.py
app/order/: routers.py  schemas.py  service.py
app/party_menu/: routers.py  schemas.py  service.py
app/payment/: routers.py  schemas.py  service.py
app/product/: routers.py  schemas.py  service.py
app/product_section/: __init__.py  routers.py  schemas.py  service.py
app/review/: routers.py  schemas.py  service.py
app/slider/: __init__.py  routers.py  schemas.py  service.py
app/user/: routers.py  schemas.py  service.py
app/utils/: cloudinary.py  email.py  ssl_service.py
migrations/20260314070555_add_soft_delete_to_product/: migration.sql
scripts/: seed_categories.py
scripts/project/: seed_products.py  seed_users.py
