[project]
name = "akfood"
version = "0.1.0"
description = "akfood means alkhalifa food app"
authors = [
    {name = "robiulsunnyemon",email = "robiulsunyemon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "fastapi-mail (>=1.6.2,<2.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
