[tool.poetry]
name = "akfood"
version = "0.1.0"
description = "akfood means alkhalifa food app"
authors = ["robiulsunnyemon <robiulsunyemon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = {extras = ["standard"], version = ">=0.135.1,<0.136.0"}
prisma = ">=0.15.0,<0.16.0"
bcrypt = ">=5.0.0,<6.0.0"
pyjwt = ">=2.11.0,<3.0.0"
cloudinary = ">=1.44.1,<2.0.0"
google-auth = ">=2.49.0,<3.0.0"
google-auth-httplib2 = ">=0.3.0,<0.4.0"
google-auth-oauthlib = ">=1.3.0,<2.0.0"
uvicorn = ">=0.41.0,<0.42.0"
fastapi-mail = ">=1.6.2,<2.0.0"
pydantic-settings = ">=2.13.1,<3.0.0"
pydantic = {extras = ["email"], version = ">=2.12.5,<3.0.0"}
python-multipart = ">=0.0.22,<0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
